# openai-api-with-easy-tools-and-web-browsing

./: LICENSE  README.md  openai-api-with-easy-tools-and-web-browsing.py  openai-api-with-easy-tools-and-web-browsing_fr.py  openai_api_with_easy_tools_and_web_browsing_fr.py  pyproject.toml  test_fr.py
src/: openai_api_with_easy_tools_and_web_browsing.py
tests/: test.py  test_fr.py
